serialcon: Enable remote text console connections
Done via libvirt's console streaming API. We need to hook into our local
libvirt glib impl to make this work.

--- a/src/virt-manager.py.in
+++ b/src/virt-manager.py.in
@@ -395,6 +395,10 @@ def main():
             logging.exception("Could not get connection to session bus, "
                               "disabling DBus service")
 
+    # Hook libvirt events into glib main loop
+    import virtManager.libvirtglib
+    virtManager.libvirtglib.register_event_impl()
+
     # At this point we're either starting a brand new controlling instance,
     # or the dbus comms to existing instance has failed
 
