Configure dbus interface even if some env variables aren't available
Fixes app uniqueness on KDE.

--- a/src/virt-manager.py.in
+++ b/src/virt-manager.py.in
@@ -378,10 +378,7 @@ def main():
 
     engine = vmmEngine()
 
-    if (not (options.nodbus) and
-        not ((os.getenv("DBUS_SESSION_BUS_ADDRESS") is None) and
-             (os.getenv("DBUS_STARTER_ADDRESS") is None))):
-
+    if not options.nodbus:
         try:
             managerObj = dbus_config(engine)
             if managerObj:
