manager: Option to view VM CPU usage of guest OR host
Since forever, all we've ever shown is a VMs CPU usage according to host
resources. However I don't think this is the intuitive default, when users
see a graph for each VM IMO it's implies the CPU usage of the guest's
resources.

Change the default to 'guest CPU usage', and add an extra optional column
for explicitly listing 'host CPU usage'

--- a/src/virt-manager.schemas.in
+++ b/src/virt-manager.schemas.in
@@ -34,8 +34,21 @@
       <default>1</default>
 
       <locale name="C">
-        <short>Show cpu usage in summary</short>
-        <long>Show the cpu usage field in the domain list summary view</long>
+        <short>Show guest cpu usage in summary</short>
+        <long>Show the guest cpu usage field in the domain list summary view</long>
+      </locale>
+    </schema>
+
+    <schema>
+      <key>/schemas/apps/::PACKAGE::/vmlist-fields/host_cpu_usage</key>
+      <applyto>/apps/::PACKAGE::/vmlist-fields/host_cpu_usage</applyto>
+      <owner>::PACKAGE::</owner>
+      <type>bool</type>
+      <default>0</default>
+
+      <locale name="C">
+        <short>Show host cpu usage in summary</short>
+        <long>Show the host cpu usage field in the domain list summary view</long>
       </locale>
     </schema>
 
