Add new app icon and massively reorg our icon folder
New icon from Jakub Steiner is based on virt-manager.org theme.

Actually organize all our existing icons into a proper icon hierarchy.

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,14 @@
-!/po/*.po
-!/po/*.pot
-!/po/POTFILES*
-/po/
-
 *~
-
 *.pyc
 .tstamp*
+*.gmo
+
+/po/POTFILES
+/po/.*
+/po/stamp-it
 
 Makefile
-Makefile.in
+Makefile.in*
 /m4/
 /build/
 /autom4te.cache/
