--- a/src/virt-manager.desktop.in.in
+++ b/src/virt-manager.desktop.in.in
@@ -1,7 +1,7 @@
 [Desktop Entry]
 _Name=Virtual Machine Manager
 _Comment=Manage virtual machines
-Icon=::ICONDIR::/::PACKAGE::-icon.svg
+Icon=::PACKAGE::
 Exec=::PACKAGE::
 Type=Application
 Terminal=false
