details: Confirm with user before throwing away changes on page change
We've had many users be confused by changes in the details pages not
taking immediate effect, or just forgetting to hit apply.

Now by default we prompt users if switching pages if there are unapplied
changes. This can be disabled like other prompts in Edit->Prefs or with
a 'Don't warn me again' chkbox in the dialog.

--- a/src/virt-manager.schemas.in
+++ b/src/virt-manager.schemas.in
@@ -352,6 +352,19 @@
     </schema>
 
     <schema>
+      <key>/schemas/apps/::PACKAGE::/confirm/unapplied_dev</key>
+      <applyto>/apps/::PACKAGE::/confirm/unapplied_dev</applyto>
+      <owner>::PACKAGE::</owner>
+      <type>bool</type>
+      <default>1</default>
+
+      <locale name="C">
+        <short>Confirm about unapplied device changes</short>
+        <long>Whether we ask the user to apply or discard unapplied device changes</long>
+      </locale>
+    </schema>
+
+    <schema>
       <key>/schemas/apps/::PACKAGE::/manager_window_height</key>
       <applyto>/apps/::PACKAGE::/manager_window_height</applyto>
       <owner>::PACKAGE::</owner>
