--- a/src/virt-manager.py.in
+++ b/src/virt-manager.py.in
@@ -180,7 +180,7 @@ def show_engine(engine, show, uri, uuid, no_conn_auto):
     engine.show_manager()
 
     if uri:
-        conn = engine.add_connection(uri)
+        conn = engine.add_conn(uri)
 
         if conn and show:
             conn.connect_opt_out("state-changed",
@@ -190,7 +190,7 @@ def show_engine(engine, show, uri, uuid, no_conn_auto):
         engine.connect_to_uri(uri)
 
     if not no_conn_auto:
-        engine.autostart_connections()
+        engine.autostart_conns()
 
 # maps --show-* to remote manager (ie dbus call) methods
 def show_remote(managerObj, show, uri, uuid):
