rpm: TUI: Requires libuser and IPy

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -108,6 +108,8 @@ Group: Applications/Emulators
 
 Requires: virt-manager-common = %{verrel}
 Requires: python-newt_syrup
+Requires: libuser-python
+Requires: python-IPy
 
 %description tui
 An interactive text user interface for Virtual Machine Manager.
