--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -247,6 +247,17 @@ update-desktop-database -q %{_datadir}/applications
 %endif
 
 %changelog
+* Tue Jul 26 2011 Cole Robinson <crobinso@redhat.com> - 0.9.0-1
+- Use a hiding toolbar for fullscreen mode
+- Use libguestfs to show guest packagelist and more (Richard W.M. Jones)
+- Basic 'New VM' wizard support for LXC guests
+- Remote serial console access (with latest libvirt)
+- Remote URL guest installs (with latest libvirt)
+- Add Hardware: Support <filesystem> devices
+- Add Hardware: Support <smartcard> devices (Marc-André Lureau)
+- Enable direct interface selection for qemu/kvm (Gerhard Stenzel)
+- Allow viewing and changing disk serial number
+
 * Thu Mar 24 2011 Cole Robinson <crobinso@redhat.com> - 0.8.7-1
 - Allow renaming an offline VM
 - Spice password support (Marc-André Lureau)
