rpm: TUI requires a newer version of python-newt_syrup

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -144,7 +144,7 @@ Summary: Virtual Machine Manager text user interface
 Group: Applications/Emulators
 
 Requires: virt-manager-common = %{verrel}
-Requires: python-newt_syrup
+Requires: python-newt_syrup >= 0.1.2
 Requires: libuser-python
 Requires: python-IPy
 
