configure: Make summary output match command line names for rhel6 opts

--- a/configure.ac
+++ b/configure.ac
@@ -135,9 +135,9 @@ else
 AC_MSG_NOTICE([Install TUI:                     no])
 fi
 if test "x$ENABLE_UNSUPPORTED_RHEL_OPTS" = "x1" ; then
-AC_MSG_NOTICE([Enable unsupported RHEL opts:    yes])
+AC_MSG_NOTICE([Enable unsupported RHEL options: yes])
 else
-AC_MSG_NOTICE([Enable unsupported RHEL opts:    no])
+AC_MSG_NOTICE([Enable unsupported RHEL options: no])
 fi
 if test "x$PREFERRED_DISTROS" = "x" ; then
 AC_MSG_NOTICE([Preferred distros:               none])
