--- a/src/virt-manager-tui.py.in
+++ b/src/virt-manager-tui.py.in
@@ -70,8 +70,8 @@ def main():
     (options, ignore) = parse_commandline()
     cli.setup_logging(appname, options.debug)
 
-    logging.debug("Launched as: %s" % " ".join(sys.argv[:]))
-    logging.debug("virtManager import: %s" % str(virtManager))
+    logging.debug("Launched as: %s", " ".join(sys.argv[:]))
+    logging.debug("virtManager import: %s", str(virtManager))
 
     cli.check_virtinst_version(virtinst_str)
 
