Build system changes for UI move

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -44,21 +44,21 @@ src/virtManager/systray.py
 src/virtManager/uihelpers.py
 src/virtManager/util.py
 
-src/vmm-about.glade
-src/vmm-add-hardware.glade
-src/vmm-choose-cd.glade
-src/vmm-clone.glade
-src/vmm-create-interface.glade
-src/vmm-create-net.glade
-src/vmm-create-pool.glade
-src/vmm-create-vol.glade
-src/vmm-create.glade
-src/vmm-delete.glade
-src/vmm-details.glade
-src/vmm-host.glade
-src/vmm-manager.glade
-src/vmm-migrate.glade
-src/vmm-open-connection.glade
-src/vmm-preferences.glade
-src/vmm-progress.glade
-src/vmm-storage-browse.glade
+src/vmm-about.ui
+src/vmm-add-hardware.ui
+src/vmm-choose-cd.ui
+src/vmm-clone.ui
+src/vmm-create-interface.ui
+src/vmm-create-net.ui
+src/vmm-create-pool.ui
+src/vmm-create-vol.ui
+src/vmm-create.ui
+src/vmm-delete.ui
+src/vmm-details.ui
+src/vmm-host.ui
+src/vmm-manager.ui
+src/vmm-migrate.ui
+src/vmm-open-connection.ui
+src/vmm-preferences.ui
+src/vmm-progress.ui
+src/vmm-storage-browse.ui
