--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -85,8 +85,6 @@ Requires: gnome-python2-gnomekeyring >= 2.15.4
 Requires: libxml2-python >= 2.6.23
 # Absolutely require this version or later
 Requires: python-virtinst >= %{virtinst_version}
-# Required for loading the glade UI
-Requires: pygtk2-libglade
 # Earlier vte had broken python binding module
 Requires: vte >= 0.12.2
 # For online help
@@ -260,7 +258,7 @@ update-desktop-database -q %{_datadir}/applications
 %{_datadir}/%{name}/virtManager/*.py*
 %endif
 
-%{_datadir}/%{name}/*.glade
+%{_datadir}/%{name}/*.ui
 %{_datadir}/%{name}/%{name}.py*
 
 %{_datadir}/%{name}/icons
