Update translations (and make em work with gtkbuilder)

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -44,21 +44,21 @@ src/virtManager/systray.py
 src/virtManager/uihelpers.py
 src/virtManager/util.py
 
-src/vmm-about.ui
-src/vmm-add-hardware.ui
-src/vmm-choose-cd.ui
-src/vmm-clone.ui
-src/vmm-create-interface.ui
-src/vmm-create-net.ui
-src/vmm-create-pool.ui
-src/vmm-create-vol.ui
-src/vmm-create.ui
-src/vmm-delete.ui
-src/vmm-details.ui
-src/vmm-host.ui
-src/vmm-manager.ui
-src/vmm-migrate.ui
-src/vmm-open-connection.ui
-src/vmm-preferences.ui
-src/vmm-progress.ui
-src/vmm-storage-browse.ui
+[type: gettext/glade]src/vmm-about.ui
+[type: gettext/glade]src/vmm-add-hardware.ui
+[type: gettext/glade]src/vmm-choose-cd.ui
+[type: gettext/glade]src/vmm-clone.ui
+[type: gettext/glade]src/vmm-create-interface.ui
+[type: gettext/glade]src/vmm-create-net.ui
+[type: gettext/glade]src/vmm-create-pool.ui
+[type: gettext/glade]src/vmm-create-vol.ui
+[type: gettext/glade]src/vmm-create.ui
+[type: gettext/glade]src/vmm-delete.ui
+[type: gettext/glade]src/vmm-details.ui
+[type: gettext/glade]src/vmm-host.ui
+[type: gettext/glade]src/vmm-manager.ui
+[type: gettext/glade]src/vmm-migrate.ui
+[type: gettext/glade]src/vmm-open-connection.ui
+[type: gettext/glade]src/vmm-preferences.ui
+[type: gettext/glade]src/vmm-progress.ui
+[type: gettext/glade]src/vmm-storage-browse.ui
